test/tests/bad/transmute-size-mismatch.carth
;; NoClassInstance

(define: (foo Unit)
    (Fun Unit Int8)
  (transmute (: 42 Int)))
